--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="header bg-gradient-green2 py-7 py-lg-8">
-  <div class="container">
+<div class="header bg-primary-green py-7 py-lg-9">
+  <!-- <div class="container">
     <div class="header-body text-center mb-4">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
@@ -12,23 +12,25 @@
     <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
       <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
     </svg>
-  </div>
+  </div> -->
 </div>
 <!-- Page content -->
-<div class="container mt--8 pb-5">
+<div class="container mt--9 pb-5">
   <div class="row justify-content-center">
-    <div class="col-lg-5 col-md-7">
-      <div class="card bg-primary shadow border-0">
+    <div class="col-lg-4 col-md-7">
+      <div class="card shadow border-0">
         <div class="card-body px-lg-5 py-lg-5">
-
-          <form role="form" [formGroup]="loginForm" (submit)="signIn($event)">
+          <div class="bg-primary-purple header-custom">
+            <img src="assets/img/brand/logo-vertical-verde.png">
+          </div>
+          <form  class="mt-5" role="form" [formGroup]="loginForm" (submit)="signIn($event)">
             <div class="form-group mb-3">
-              <dsw-input-control label="E-mail" iconAddon="ni ni-email-83">
+              <dsw-input-control>
                 <input dwsInputSlot class="form-control" placeholder="Email" formControlName="login" type="email">
               </dsw-input-control>
             </div>
             <div class="form-group">
-              <dsw-input-control label="Senha" iconAddon="ni ni-lock-circle-open" [showAppend]="true">
+              <dsw-input-control  [showAppend]="true">
 
                 <input dwsInputSlot class="form-control" id="password" #passwordInput formControlName="password"
                   placeholder="Senha" type="password">
@@ -45,21 +47,32 @@
                 <span class="text-muted">Lembrar meu login</span>
               </label>
             </div> -->
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary my-4">Entrar</button>
+            <div class="text-center mb-3">
+              <button type="submit" class="btn btn-primary my-3">Entrar</button>
+              <a [routerLink]="['/register']" class="link-2" ><small>Esqueci a senha</small></a>
             </div>
           </form>
 
+          <div class="bg-secondary-green footer-custom">
+            <div class="row">
+              <div class="col-3">
+                <img class="logo-lines" src="assets/img/brand/lines-logo-purple.png">
+              </div>
+              <div class="col-9 text-right link">
+                <a [routerLink]="['/register']" ><small>Criar novo cadastro</small></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row mt-3">
+      <!-- <div class="row mt-3">
         <div class="col-6">
           <a href="javascript:void(0)" class="text-light"><small>Esqueceu a senha?</small></a>
         </div>
         <div class="col-6 text-right">
           <a [routerLink]="['/register']" class="text-light"><small>Criar novo cadastro</small></a>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
