--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
-<div class="header bg-gradient-green2 py-7 py-lg-8">
-  <div class="container">
+<div class="header bg-primary-green py-7 py-lg-9">
+  <!-- <div class="container">
     <div class="header-body text-center">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
@@ -11,151 +11,245 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="separator separator-bottom separator-skew zindex-100">
+  </div> -->
+  <!-- <div class="separator separator-bottom separator-skew zindex-100">
     <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
       <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
     </svg>
-  </div>
+  </div> -->
 </div>
 <!-- Page content -->
-<div class="container mt--8 pb-5">
+<div class="container mt--9 pb-5">
   <!-- Table -->
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-8">
-      <div class="card bg-gradient-lighter shadow border-0">
+      <div class="card  shadow border-0">
+        <div class="card-header-custom d-flex justify-content-between">
+          <img src="assets/img/brand/logo-horizontal-verde.png">
+          <h2>
+            Criar seu usuário
+          </h2>
+        </div>
         <div class="card-body px-lg-5 py-lg-5">
-          <form role="form" [formGroup]="registerForm" (submit)="onSubmit($event)">
+          <p class="text-lead">
+            Preencha os dados do formulário e depois confirme seu email para
+            criar seu usuário.
+          </p>
+          <form role="form" [formGroup]="registerForm" >
+              <!-- Vertical Steppers -->
+              <div class="row" style="margin-top: -50px;">
+                <div class="col-md-12">
 
-            <div class="row">
-              <div class="col-lg-4">
-                <dsw-input-control label="Primeiro nome" for="name" >
-                  <input dwsInputSlot class="form-control" #refName id="name" formControlName="name"
-                    placeholder="Digite seu primeiro nome" type="text" />
-                </dsw-input-control>
+                  <!-- Stepers Wrapper -->
+                  <ul class="stepper stepper-vertical">
+
+                    <!-- First Step -->
+                    <li [ngClass]="{completed: step > 1, active: step === 1 }">
+                      <a href="javaScript:void(0)" (click)="step = 1">
+                        <span class="circle">1</span>
+                        <span class="label">Dados Pessoais</span>
+                      </a>
+
+                      <ng-container *ngIf="step === 1">
+                        <div class="row margin-content" >
+                          <div class="col-lg-6">
+                            <dsw-input-control label="Primeiro nome" for="name" >
+                              <input dwsInputSlot class="form-control" #refName id="name" formControlName="name"
+                                placeholder="Digite seu primeiro nome" type="text" />
+                            </dsw-input-control>
+                          </div>
+                          <div class="col-lg-6">
+                            <dsw-input-control label="Sobrenome" for="lastName">
+                              <input dwsInputSlot class="form-control" id="lastName" formControlName="lastName"
+                                placeholder="Digite seu sobrenome" type="text" />
+                            </dsw-input-control>
+                          </div>
+            
+                          <div class="col-lg-12">
+                            <dsw-input-control label="E-mail" for="email"  [errorMsgMap]="{email: 'Formato de e-mail inválido'}">
+                              <input dwsInputSlot class="form-control" id="email" formControlName="email"
+                                placeholder="Ex.: email@gmail.com" type="email" />
+                            </dsw-input-control>
+                          </div>
+            
+                          <div class="col-lg-4">
+                            <dsw-input-control label="Tipo" for="docType" >
+                              <select dwsInputSlot id="docType" class="custom-select form-control" formControlName="docType">
+                                <option [ngValue]="1">CPF</option>
+                                <option [ngValue]="2">CNPJ</option>
+                              </select>
+                            </dsw-input-control>
+                          </div>
+                          <div class="col-lg-8">
+                            <dsw-input-control label="Documento" for="docNumber">
+                              <input dwsInputSlot class="form-control" id="docNumber" formControlName="docNumber"
+                                placeholder="Ex.: 111.111.111-9" type="email" [dwsMask]="registerForm.value.docType == 1 ? '000.000.000-00': '00.000.000/0000-00'" />
+                            </dsw-input-control>
+                          </div>
+                        </div>
+                        <div class="row  mt-1 line-btn" >
+                          <div class="col-md-12 text-right">
+                            <button class="btn btn-primary " (click)="step = 2">Próximo</button>
+                          </div>
+                        </div>
+                      </ng-container>
+                    </li>
+
+                    <!-- Second Step -->
+                    <li [ngClass]="{completed: step > 2, active: step === 2 }">
+                      <!--Section Title -->
+                      <a href="javaScript:void(0)" (click)="step = 2">
+                        <span class="circle">2</span>
+                        <span class="label">Endereço de contato</span>
+                      </a>
+
+                      <ng-container *ngIf="step === 2">
+                        <!-- Address -->
+            
+                        <div class="row margin-content" formGroupName="address">
+                          <div class="col-lg-4">
+                            <dsw-input-control label="CEP" for="zipCode" [showAppend]="true">
+            
+                              <input dwsInputSlot class="form-control" id="zipCode" (change)="dispatchSearchZipCode()" formControlName="zipCode"
+                                placeholder="Ex.: 00000-000" type="text" dwsMask="00000-000" />
+            
+                                <button append type="button" class="input-group-text passwordshow__Button" (click)="dispatchSearchZipCode()">
+                                  <i class="fas fa-search"></i>
+                                </button>
+            
+                            </dsw-input-control>
+                          </div>
+            
+                          <div class="col-md-12">
+                            <dsw-input-control label="Endereço" for="address">
+                              <input dwsInputSlot class="form-control" id="address" formControlName="address"
+                                placeholder="Ex.: Rua São João" type="text" />
+                            </dsw-input-control>
+                          </div>
+            
+                          <div class="col-md-3">
+                            <dsw-input-control label="Número" for="number">
+                              <input dwsInputSlot class="form-control" id="number" formControlName="number"
+                                placeholder="Ex.: 200, 300 ..." type="string" />
+                            </dsw-input-control>
+                          </div>
+                          <div class="col-md-9">
+                            <dsw-input-control label="Complemento" for="complemento">
+                              <input dwsInputSlot class="form-control" id="complemento" formControlName="complemento"
+                                placeholder="Ex.: ap 20B, Casa 1, Cj 6 ..." type="text" />
+                            </dsw-input-control>
+                          </div>
+            
+                          <div class="col-lg-12">
+                            <dsw-input-control label="Bairro" for="district">
+                              <input dwsInputSlot class="form-control" id="district" formControlName="district"
+                                placeholder="Digite seu Bairro" type="text" />
+                            </dsw-input-control>
+                          </div>
+            
+                          <div class="col-lg-6">
+                            <dsw-input-control label="Cidade" for="city">
+                              <input dwsInputSlot class="form-control" id="city" formControlName="city" placeholder="São paulo"
+                                type="text" />
+                            </dsw-input-control>
+                          </div>
+                          <div class="col-lg-6">
+                            <dsw-input-control label="Estado" for="uf">
+                              <input dwsInputSlot class="form-control" id="uf" formControlName="uf" placeholder="Ex.: SP, RJ ..."
+                                type="text" />
+                            </dsw-input-control>
+                          </div>
+                        </div>
+                        <div class="row  mt-1 line-btn" >
+                          <div class="col-md-12 text-right">
+                            <button class="btn btn-flat btn-sm" (click)="step = 1">Voltar</button>
+                            <button class="btn btn-primary btn-sm" (click)="step = 3">Próximo</button>
+                          </div>
+                        </div>
+                      </ng-container>
+                    </li>
+
+                    <!-- Third Step -->
+                    <li [ngClass]="{completed: step > 3, active: step === 3 }">
+                      <a href="javaScript:void(0)" (click)="step = 3">
+                        <span class="circle"><i class="fas fa-exclamation"></i></span>
+                        <span class="label">WhatsApp</span>
+                      </a>
+
+                      <ng-container *ngIf="step === 3">
+                        <!-- WhatsApp -->
+                        <div class="row margin-content"> 
+                          <div class="col-12">
+                            <dsw-multi-input-list classInput="form-control" formControlName="phone" [touched]="registerForm.controls?.phone?.touched" placeholder="numero" type="text"></dsw-multi-input-list>
+                
+                            <span class="text-danger text-xs" *ngIf="!!registerForm.controls?.phone?.errors?.minlength && !!registerForm.controls?.phone?.touched">Minimo obrigatório de "{{registerForm.controls?.phone?.errors?.minlength?.requiredLength}}" telefone(s)</span>
+                          </div>
+                
+                        </div>
+                        <div class="row  mt-1 line-btn" >
+                          <div class="col-md-12 text-right">
+                            <button class="btn btn-flat btn-sm" (click)="step = 2">Voltar</button>
+                            <button class="btn btn-primary btn-sm" (click)="step = 4">Próximo</button>
+                          </div>
+                        </div>
+                      </ng-container>
+                    </li>
+
+                    <!-- Fourth Step -->
+                    <li [ngClass]="{completed: step > 4, active: step === 4 }">
+                      <a href="javaScript:void(0)" (click)="step = 4">
+                        <span class="circle">4</span>
+                        <span class="label">Senha</span>
+                      </a>
+                    </li>
+
+                    <ng-container *ngIf="step === 4">
+
+                      <div class="row margin-content" formGroupName="user">
+                        <div class="col-lg-12">
+                          <dsw-input-control label="Senha" for="password">
+                            <input dwsInputSlot dwsShowPassword class="form-control" id="password" formControlName="password" placeholder="***"
+                              type="password" />
+                            
+                          </dsw-input-control>
+                        </div>
+          
+                        <div class="col-lg-12">
+                          <dsw-input-control label="Repetir Senha" for="passwordAgain">
+                            <input dwsInputSlot dwsShowPassword class="form-control" id="passwordAgain" formControlName="passwordAgain"
+                              placeholder="***" type="password" />
+                          </dsw-input-control>
+                        </div>
+                      </div>
+                      <div class="row  mt-1 line-btn" >
+                        <div class="col-md-12 text-right">
+                          <button class="btn btn-flat btn-sm" (click)="step = 3">Voltar</button>
+                          <button class="btn btn-primary btn-sm" (click)="onSubmit($event)">Salvar</button>
+                        </div>
+                      </div>
+                    </ng-container>
+                  </ul>
+                  <!-- /.Stepers Wrapper -->
+
+                </div>
               </div>
-              <div class="col-lg-8">
-                <dsw-input-control label="Sobrenome" for="lastName">
-                  <input dwsInputSlot class="form-control" id="lastName" formControlName="lastName"
-                    placeholder="Digite seu sobrenome" type="text" />
-                </dsw-input-control>
-              </div>
 
-              <div class="col-lg-12">
-                <dsw-input-control label="E-mail" for="email" iconAddon="ni ni-email-83" [errorMsgMap]="{email: 'Formato de e-mail inválido'}">
-                  <input dwsInputSlot class="form-control" id="email" formControlName="email"
-                    placeholder="Ex.: email@gmail.com" type="email" />
-                </dsw-input-control>
-              </div>
+              <!-- Steppers Navigation -->
+              
+              <!-- /.Vertical Steppers -->
 
-              <div class="col-lg-4">
-                <dsw-input-control label="Tipo" for="docType">
-                  <select dwsInputSlot id="docType" class="custom-select form-control" formControlName="docType">
-                    <option [ngValue]="1">CPF</option>
-                    <option [ngValue]="2">CNPJ</option>
-                  </select>
-                </dsw-input-control>
-              </div>
-              <div class="col-lg-8">
-                <dsw-input-control label="Documento" for="docNumber">
-                  <input dwsInputSlot class="form-control" id="docNumber" formControlName="docNumber"
-                    placeholder="Ex.: 111.111.111-9" type="email" [dwsMask]="registerForm.value.docType == 1 ? '000.000.000-00': '00.000.000/0000-00'" />
-                </dsw-input-control>
-              </div>
-            </div>
 
-            <hr class="my-4" />
 
-            <!-- Address -->
-            <h6 class="heading-small text-muted mb-4">Endereço de contato</h6>
 
-            <div class="row" formGroupName="address">
-              <div class="col-lg-4">
-                <dsw-input-control label="CEP" for="zipCode" [showAppend]="true">
 
-                  <input dwsInputSlot class="form-control" id="zipCode" (change)="dispatchSearchZipCode()" formControlName="zipCode"
-                    placeholder="Ex.: 00000-000" type="text" dwsMask="00000-000" />
 
-                    <button append type="button" class="input-group-text passwordshow__Button" (click)="dispatchSearchZipCode()">
-                      <i class="fas fa-search"></i>
-                    </button>
 
-                </dsw-input-control>
-              </div>
-
-              <div class="col-md-12">
-                <dsw-input-control label="Endereço" for="address">
-                  <input dwsInputSlot class="form-control" id="address" formControlName="address"
-                    placeholder="Ex.: Rua São João" type="text" />
-                </dsw-input-control>
-              </div>
-
-              <div class="col-md-3">
-                <dsw-input-control label="Número" for="number">
-                  <input dwsInputSlot class="form-control" id="number" formControlName="number"
-                    placeholder="Ex.: 200, 300 ..." type="string" />
-                </dsw-input-control>
-              </div>
-              <div class="col-md-9">
-                <dsw-input-control label="Complemento" for="complemento">
-                  <input dwsInputSlot class="form-control" id="complemento" formControlName="complemento"
-                    placeholder="Ex.: ap 20B, Casa 1, Cj 6 ..." type="text" />
-                </dsw-input-control>
-              </div>
-
-              <div class="col-lg-12">
-                <dsw-input-control label="Bairro" for="district">
-                  <input dwsInputSlot class="form-control" id="district" formControlName="district"
-                    placeholder="Digite seu Bairro" type="text" />
-                </dsw-input-control>
-              </div>
-
-              <div class="col-lg-6">
-                <dsw-input-control label="Cidade" for="city">
-                  <input dwsInputSlot class="form-control" id="city" formControlName="city" placeholder="São paulo"
-                    type="text" />
-                </dsw-input-control>
-              </div>
-              <div class="col-lg-6">
-                <dsw-input-control label="Estado" for="uf">
-                  <input dwsInputSlot class="form-control" id="uf" formControlName="uf" placeholder="Ex.: SP, RJ ..."
-                    type="text" />
-                </dsw-input-control>
-              </div>
-            </div>
-
-            <hr class="my-4" />
-
-            <!-- WhatsApp -->
-            <h4 class="heading-small text-muted mb-4">WhatssApp</h4>
-            <dsw-multi-input-list classInput="form-control" formControlName="phone" [touched]="registerForm.controls?.phone?.touched" placeholder="numero" type="text"></dsw-multi-input-list>
-
-            <span class="text-danger text-xs" *ngIf="!!registerForm.controls?.phone?.errors?.minlength && !!registerForm.controls?.phone?.touched">Minimo obrigatório de "{{registerForm.controls?.phone?.errors?.minlength?.requiredLength}}" telefone(s)</span>
-            <hr class="my-4" />
-
-            <div class="row" formGroupName="user">
-              <div class="col-lg-12">
-                <dsw-input-control label="Senha" for="password">
-                  <input dwsInputSlot dwsShowPassword class="form-control" id="password" formControlName="password" placeholder="***"
-                    type="password" />
-                  
-                </dsw-input-control>
-              </div>
-
-              <div class="col-lg-12">
-                <dsw-input-control label="Repetir Senha" for="passwordAgain">
-                  <input dwsInputSlot dwsShowPassword class="form-control" id="passwordAgain" formControlName="passwordAgain"
-                    placeholder="***" type="password" />
-                </dsw-input-control>
-              </div>
-            </div>
-
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary mt-4">
-                Criar Cadastro
-              </button>
-            </div>
+            
           </form>
+          <div class="row">
+            <button class="btn btn-secondary" routerLink="/login"> <i class="fa-solid fa-right-to-bracket mr-2"></i>Voltar para o Login</button>
+          </div>
+
         </div>
       </div>
     </div>
