--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -24,3 +24,12 @@
 .line-btn {
     width: 100%;
 }
+
+.logo {
+    cursor: pointer;
+}
+.box-btns {
+    @media screen and (max-width: 767px) {
+        text-align: center;
+      }
+}
