--- a/src/app/pages/import-orders/import-orders.component.html
+++ b/src/app/pages/import-orders/import-orders.component.html
@@ -48,7 +48,7 @@
         <div class="table-responsive">
           <!-- Projects table -->
           <table class="table align-items-center table-flush">
-            <thead class="thead-light">
+            <thead class="thead-purple">
               <tr>
                 <th scope="col">Nome do Arquivo</th>
                 <th scope="col">Quantidade de Linhas</th>
