--- a/src/assets/scss/core/tables/_table.scss
+++ b/src/assets/scss/core/tables/_table.scss
@@ -61,6 +61,13 @@
             color: $table-head-color;
         }
     }
+
+    .thead-purple {
+        th {
+            color: var(--color-secondary-green) !important;
+            background-color: var(--color-primary-purple) !important;
+        }
+    }
 }
 
 
