--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-vertical navbar-expand-md navbar-light bg-white" id="sidenav-main">
+
   <div class="container-fluid">
     <!-- Toggler -->
     <button class="navbar-toggler" type="button" (click)="isCollapsed=!isCollapsed"
@@ -6,9 +7,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Brand -->
-    <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
-      < Logo >
-    </a>
+    <div class="box-logo" [routerLink]="['/dashboard']">
+      <img _ngcontent-squ-c189="" src="assets/img/brand/logo-horizontal-verde.png" routerlink="/login" class="logo" tabindex="0" ng-reflect-router-link="/login">
+    </div>
+    <!-- <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
+    </a> -->
     <!-- User -->
     <ul class="nav align-items-center d-md-none">
       
